add slight change for new commit

--- a/week-4/gps2-1.html
+++ b/week-4/gps2-1.html
@@ -5,7 +5,7 @@ Write your names here:
 We spent [1:45 min] hours on this challenge.
 -->
 
-<!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
+<!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>).. -->
 
 <!DOCTYPE html>
 <html lang="en">
